# svg2tex-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: release.yml
docs/: documentation.tex
src/: cli.rs  lib.rs  main.rs  preprocess.rs  tex_engine.rs  tex_format.rs  validation.rs
src/converter/: filter.rs  image.rs  latex.rs  mod.rs  paint.rs  raster.rs  resources.rs  util.rs
