[package]
name = "svg2tex-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
default-run = "svg2tex"

[[bin]]
name = "svg2tex"
path = "src/main.rs"

[dependencies]
usvg = "0.45"
resvg = "0.45"
tiny-skia = "0.11"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.1"
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
roxmltree = "0.20"
